clusters/home/storage/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/hostname: "longhorn.psalkowski.pl"
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.psalkowski.pl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - "longhorn.psalkowski.pl"
      secretName: longhorn.psalkowski.pl-tls
